update knitted workshop

--- a/knitted_workshop/15_mixed_models_pt1.html
+++ b/knitted_workshop/15_mixed_models_pt1.html
@@ -1538,6 +1538,8 @@ div.tocify {
 <p>  </p>
 <p>[video 1 here]</p>
 <p>  </p>
+<div id="slides" class="section level2">
+<h2>Slides</h2>
 <p>You can download the slides in .odp format by clicking <a href="../slides/Mixed_Models_Part_1.odp">here</a> and in .pdf format by clicking on the image below.</p>
 <p>  </p>
 <center>
@@ -1545,6 +1547,7 @@ div.tocify {
 </center>
 <p>  </p>
 <p>Once you’ve watched the video above, run the code below on your own machines.</p>
+</div>
 <div id="linear-models-recap" class="section level2">
 <h2>Linear Models Recap</h2>
 <div id="predicting-height-from-gender" class="section level3">
