--- a/knitted_workshop/15_mixed_models_pt1.html
+++ b/knitted_workshop/15_mixed_models_pt1.html
@@ -1553,8 +1553,12 @@ div.tocify {
 <div id="predicting-height-from-gender" class="section level3">
 <h3>Predicting Height From Gender</h3>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<p>We first read in the datafile we need.</p>
-<pre class="r"><code>gender_height_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/gender_height_data.csv&quot;)</code></pre>
+<p>We first read in the datafile we need. We are also going to use <code>transmute()</code> to turn our <code>subject</code> and <code>gender</code> columns into factors.</p>
+<pre class="r"><code>gender_height_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/gender_height_data.csv&quot;)
+
+gender_height_data &lt;- gender_height_data %&gt;%
+  mutate(subject = factor(subject),
+            gender = factor(gender))</code></pre>
 <p>Now let’s plot our data. It’s really important to do this before you build any models. You need to make sure the data look as you expect, and if you’re trying to fit a linear model to your data it’s important to be sure the relationship between your variables is roughly linear. Note, I’ve added a little bit of horizontal jitter to the plot.</p>
 <pre class="r"><code>set.seed(1234)
 gender_height_data %&gt;%
@@ -1642,16 +1646,20 @@ summary(age_model)</code></pre>
 <p>We’ll be using the <code>{lme4}</code> package to build our models so let’s load that first. Remember, if you haven’t already installed <code>{lme4}</code> on your machine remember you need to first run in the Console <code>install.packages(lme4)</code>. We’ll also load the <code>{lmerTest}</code> package to give us estimated <em>p</em>-values for our parameter estimates.</p>
 <pre class="r"><code>library(lme4)
 library(lmerTest)</code></pre>
-<p>Let’s read in our data.</p>
-<pre class="r"><code>mixed_model_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/mixed_model_data.csv&quot;)</code></pre>
+<p>Let’s read in our data and turn our <code>subject</code>, <code>item</code>, and <code>condition</code> columns into factors.</p>
+<pre class="r"><code>mixed_model_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/mixed_model_data.csv&quot;)
+
+mixed_model_data &lt;- mixed_model_data %&gt;%
+  mutate(subject = factor(subject),
+            item = factor(item),
+            condition = factor(condition))</code></pre>
 <p>And generate some descriptives.</p>
 <pre class="r"><code>mixed_model_data %&gt;% 
   group_by(condition) %&gt;%
   summarise(mean_rt = mean(rt), sd_rt = sd(rt))</code></pre>
-<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
 <pre><code>## # A tibble: 2 x 3
 ##   condition mean_rt sd_rt
-##   &lt;chr&gt;       &lt;dbl&gt; &lt;dbl&gt;
+##   &lt;fct&gt;       &lt;dbl&gt; &lt;dbl&gt;
 ## 1 large        854.  87.8
 ## 2 small        804.  97.5</code></pre>
 <p>We’ll build our mixed model with <code>condition</code> as a fixed effect, and <code>subject</code> and <code>item</code> as random effects.</p>
@@ -1717,7 +1725,12 @@ summary(mixed_model)</code></pre>
 <p>[video 3]</p>
 <p>Once you’ve watched the video, run the code below on your own machines.</p>
 <p>Imagine we measured 24 subjects’ gaze duration while reading a sentence that appeared in one of three conditions - Negative, Neutral, and Positive. We had 24 items. The study is repeated measures (so everyone saw every condition).</p>
-<pre class="r"><code>tidied_factor_1_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/one_factor.csv&quot;)</code></pre>
+<pre class="r"><code>tidied_factor_1_data &lt;- read_csv(&quot;https://raw.githubusercontent.com/ajstewartlang/15_mixed_models_pt1/master/data/one_factor.csv&quot;)
+
+tidied_factor_1_data &lt;- tidied_factor_1_data %&gt;%
+  mutate(Subject = factor(Subject),
+         Item = factor(Item),
+         Condition = factor(Condition))</code></pre>
 <p>Let’s plot our data.</p>
 <pre class="r"><code>tidied_factor_1_data %&gt;%
   ggplot(aes(x = Condition, y = Gaze, colour = Condition)) +
