--- a/knitted_workshop/15_mixed_models_pt1.html
+++ b/knitted_workshop/15_mixed_models_pt1.html
@@ -1537,7 +1537,7 @@ div.tocify {
 <p>In this workshop we will take our first look at (generalised) linear mixed models (GLMMs or LMMs). The use of LMMs is becoming increasingly widespread across many aspect of the Psychological and Life Sciences in place of more traditional models (such as ANOVA) which are based on the general linear model. LMMs work by modelling individual data points (rather than aggregate data), can cope with unbalanced designed, missing data, a combination of categorical and continuous predictors, multiple random effects, participants and item covariates - and with GLMMs we can model data of different distribution types (e.g., data from the binomial distribution). The philosophy begind (G)LMMs is relatively straightforward and can be thought of as an extension of the general linear model. In this first video, I’ll summarise the general linear model and then show how LMMs take things a little bit further.</p>
 <center>
 <p>  </p>
-<iframe width="560" height="315" src="https://youtube.com/embed/gELAuRHCEbw" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="https://youtube.com/embed/6hirHdUIF_o" frameborder="0" allowfullscreen>
 </iframe>
 <p>  </p>
 </center>
@@ -1751,7 +1751,7 @@ summary(mixed_model)</code></pre>
 <p>In this next video, I’ll show you how to build a mixed model for a design where you have one experimental factor with three levels.</p>
 <center>
 <p>  </p>
-<iframe width="560" height="315" src="https://youtube.com/embed/yfmqBTeyoBk" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="https://youtube.com/embed/Y8hW9gdW8i0" frameborder="0" allowfullscreen>
 </iframe>
 <p>  </p>
 </center>
